--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,16 +1,8 @@
-@font-face {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 100 900;
-  font-display: optional;
-  src: url(/fonts/Inter-roman-latin.var.woff2) format("woff2");
-}
-
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Inter, sans-serif;
+  font-family: Inter, monospace;
 }
 
 a {
